--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2964,11 +2964,11 @@ ul.social-icon li a i:hover {
 /*------------ Slider form ---------------- */
 .tf-slide-form {
   padding: 147px 0 193px 0;
-  background-image: url(./../images/page/bg4.jpg);
+  background-image: url(./../images/Home/homebanner.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  animation: shrink 7s infinite alternate;
+  /* animation: shrink 7s infinite alternate; */
 }
 .tf-slide-form .slide-form > span {
   font-size: 16px;
