--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2684,6 +2684,7 @@ ul.social-icon li a i:hover {
 .widget-tf-slider {
   position: relative;
   overflow: hidden;
+  
 }
 .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image img {
   position: absolute;
@@ -2962,14 +2963,41 @@ ul.social-icon li a i:hover {
 }
 
 /*------------ Slider form ---------------- */
+
+
 .tf-slide-form {
+  padding: 173px 0 297px 0;
+  background-image: url('./../images/Home/homebanner.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full screen height */
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .tf-slide-form {
+      height: 100vh; /* Takes full viewport height on mobile */
+      background-size: cover; /* Ensures the image covers the entire area */
+      background-position: center; /* Centers the image */
+      background-repeat: no-repeat; /* Prevents the image from repeating */
+      position: relative;
+  }
+}
+ 
+
+/* .tf-slide-form {
   padding: 173px 0 297px 0;
   background-image:  url(./../images/Home/homebanner.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   position: relative;
-  width: 100%;
+  width: 100%; */
 
 
 
@@ -2986,7 +3014,7 @@ ul.social-icon li a i:hover {
   width: 100%; 
   max-width: 100vw; 
   box-sizing: border-box;  */
-}
+/* } */
 
 .tf-slide-form .slide-form > span {
   font-size: 16px;
@@ -3349,9 +3377,10 @@ ul.social-icon li a i:hover {
   text-transform: capitalize;
 }
 .tf-page-title .page-title .main-title {
-  font-size: 63px;
+  margin-top: 30px;
+  font-size: 43px;
   font-weight: 700;
-  color: #ffffff;
+  color: #ab1c1c;
   line-height: 1.32em;
   text-transform: capitalize;
 }
