--- a/public/assets/scss/_responsive.scss
+++ b/public/assets/scss/_responsive.scss
@@ -740,7 +740,7 @@
         margin-bottom: 50px;
     }
     .post-property .wrap-car-feature .tf-listing-info #tf-features {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr ;
     }
     
     .listing-list-car-grid.listing-list-car-list .listing-grid-item .listing-item-content .listing-top-content .description .listing-information .inner span {
