--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1001,6 +1001,30 @@ body.modal-open {
 .top-bar .list-infor-topbar li a i {
   margin-right: 10px;
 }
+@media (min-width: 769px) {
+  #mobilelog {
+    display: none !important;
+  }
+}
+@media (min-width: 769px) {
+  #mobilecolor {
+    background-color: #b3b6b7  !important;
+  }
+}
+
+
+@media (max-width: 767px) {
+  #mobilecolor{
+      background-color: white;
+  }
+}
+@media (max-width: 991px) {
+  #mobilecolor {
+    background-color: white;
+  }
+    
+  }
+
 
 #header3 {
   position: relative;
@@ -1082,6 +1106,8 @@ body.modal-open {
   width: 123px;
   height: auto;
 }
+
+
 
 /* Main Menu */
 .main-header .main-menu {
@@ -2269,7 +2295,7 @@ ul.social-icon {
   justify-content: center;
 }
 ul.social-icon li a i {
-  color: #FFFEFE;
+  color: red;
   font-size: 16px;
   width: 40px;
   height: 40px;
@@ -2288,6 +2314,41 @@ ul.social-icon li a i {
 ul.social-icon li a i:hover {
   background-color: #D01818;
 }
+
+
+
+
+ul.social-icon1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+ul.social-icon1 li a i {
+  color: red;
+  font-size: 16px;
+  width: 40px;
+  height: 40px;
+  background-color:white;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  margin: 0 10px;
+  display: block;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+ul.social-icon1 li a i:hover {
+  background-color: white;
+}
+
+
+
+
+
+
 
 .icon-share li > a > i {
   background-color: #F2F6F7 !important;
@@ -6069,7 +6130,27 @@ ul.social-icon li a i:hover {
 .mybest-selling2 {
   overflow: hidden;
 }
-
+.swiper-button-prev1,
+.swiper-button-next1 {
+  margin-top: 50px;
+    color: black !important; /* Change this to your desired button color */
+    width: 50px; /* Adjust size as needed */
+    height: 50px; /* Adjust size as needed */
+    background-color: red;
+    border-radius: 50%; /* Optional: round the buttons */
+}
+@media (max-width: 767px) {
+  .swiper-button-prev,
+  .swiper-button-next {
+      display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .swiper-button-prev,
+  .swiper-button-next {
+      display: none;
+  }
+}
 .best-selling .item {
   padding: 28px 28px 56px 28px;
   text-align: center;
