--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1008,7 +1008,7 @@ body.modal-open {
 }
 @media (min-width: 769px) {
   #mobilecolor {
-    background-color: #b3b6b7  !important;
+    background-color: #ccd2de  !important;
   }
 }
 
